# mcp-repo-hygiene-guardian

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: EXAMPLE_OUTPUTS.md  V1_CONTRACT.md
src/mcp_guardian_template/: server.py
src/mcp_repo_hygiene_guardian/: server.py
tests/: test_determinism.py
